// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeFormMessage Component matches snapshot with SDK error 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  >
    <div
      aria-live="polite"
      class="flex mb-2 items-center text-sm font-medium theme-universal:text-error"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert h-4 w-4 mr-1 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <p
        class="text-destructive text-sm theme-universal:text-error"
      >
        Invalid email format
      </p>
    </div>
  </div>
</form>
`;

exports[`ULThemeFormMessage Component matches snapshot with form validation error 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  >
    <div
      aria-live="polite"
      class="flex mb-2 items-center text-sm font-medium theme-universal:text-error"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert h-4 w-4 mr-1 flex-shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <p
        class="text-destructive text-sm theme-universal:text-error"
        data-slot="form-message"
        id="«r2»-form-item-message"
      >
        This field is required
      </p>
    </div>
  </div>
</form>
`;

exports[`ULThemeFormMessage Component matches snapshot with no errors 1`] = `
<form>
  <div
    class="grid"
    data-slot="form-item"
  />
</form>
`;
